updated components with curent changes

--- a/src/app/features/fms/components/base-fms/base-fms.component.html
+++ b/src/app/features/fms/components/base-fms/base-fms.component.html
@@ -1,83 +1,104 @@
-<div class="container-fluid"> 
-   <!-- Top Bar -->
-   <form [formGroup]="receiptingDetailsForm">
+<div class="container-fluid">
+  <!-- Top Bar -->
+  <form [formGroup]="receiptingDetailsForm">
     <div class="top-bar">
-        <div class="top-select org">
-            <span>{{'fms.org' | translate}}:</span>
-            <div class="dropdown-container">
-                <select class="form-control fw-bold" id="organization"  formControlName="organization"  (change)="onOrganizationChange($event)"  >
-                    <label for="organization">Select</label>
-                    <option *ngFor="let org of organization" [value]="org.id" [selected]="org.id===2">{{ org.name }}</option>
-                    
-               
-            </select>
-            <i class="pi pi-chevron-down dropdown-icon"></i>
-        </div>
-        </div>
-        <div class="top-select">
-            <span>{{'fms.branch' | translate}}:</span>
-            
-                <div class="dropdown-container ">
-                    <select class="form-control fw-bold" id="branch" formControlName="selectedBranch"  (change)="onBranchChange($event)">
-                   
-                        <option value=""  >Select </option>
-                        <option *ngFor="let branch of branches" [value]="branch.id" [selected]="branch.id===1" >{{branch.name}}</option>
-                
-            </select>
-            <i class="pi pi-chevron-down dropdown-icon " ></i>
-        </div>
-        </div>
-        <div class="top-select">
-            <span>{{'fms.yr' | translate}}:</span>
-            
-                <div class="dropdown-container">
-                    <select class="form-control fw-bold">
-                <option>2024</option>
-                <option>2023</option>
-                <option>2022</option>
-            </select>
-            <i class="pi pi-chevron-down dropdown-icon"></i>
-        </div>
-        </div>
-        <div class="top-select">
-            <span>{{'fms.period' | translate}}:</span>
-            <div class="dropdown-container">
-            <select class="form-control fw-bold">
-                 
-                <option>OCT</option>
-                <option>NOV</option>
-                <option>DEC</option>
-            </select>
-            <i class="pi pi-chevron-down dropdown-icon"></i>
-        </div>
-        </div>
+      <div class="top-select org">
+        <span>{{ "fms.org" | translate }}:</span>
+
+        <select
+          class="form-select fw-bold"
+          id="organization"
+          formControlName="organization"
+          (change)="onOrganizationChange($event)"
+        >
+          <!-- <label for="organization">Select</label> -->
+
+          <option *ngFor="let org of organization" [value]="org.id">
+            {{ org.name }}
+          </option>
+        </select>
+      </div>
+      <div class="top-select">
+        <span>{{ "fms.branch" | translate }}:</span>
+
+        <select
+          class="form-select fw-bold"
+          id="branch"
+          formControlName="selectedBranch"
+          (change)="onBranchChange($event)"
+        >
+          <option value="">Select</option>
+          <option *ngFor="let branch of branches" [value]="branch.id">
+            {{ branch.name }}
+          </option>
+        </select>
+      </div>
+      <div class="top-select">
+        <span>{{ "fms.yr" | translate }}:</span>
+
+        <select
+          class="form-select fw-bold"
+          formControlName="year"
+          (change)="onYearChange($event)"
+        >
+          <option *ngFor="let yrs of years" [value]="yrs.year">
+            {{ yrs.year }}
+          </option>
+        </select>
+      </div>
+      <div class="top-select">
+        <span>{{ "fms.period" | translate }}:</span>
+        <select class="form-select fw-bold" formControlName="period">
+          <option *ngFor="let prd of periods" [value]="prd.period">
+            {{ prd.period }}
+          </option>
+        </select>
+      </div>
     </div>
-</form>
-<div class="base-content-section">
-  
+  </form>
+  <div class="base-content-section">
     <div class="card">
-   
-      <div class="card-body " >
+      <div class="card-body">
         <div class="row my-3 mx-3">
           <div class="col-3 mb-3">
             <div class="card fixed-height-card hover-effect">
-              <div class="card-header bg-transparent header">General Ledger</div>
-              <div class="card-body ">
-                <div class="custom-list list " >
-                  <div *ngFor="let item of GLledger" (click)="toggleItem(item)" [class.active]="item.showSubItems">
+              <div class="card-header bg-transparent header">
+                General Ledger
+              </div>
+              <div class="card-body">
+                <div class="custom-list list">
+                  <div
+                    *ngFor="let item of GLledger"
+                    (click)="toggleItem(item)"
+                    [class.active]="item.showSubItems"
+                  >
                     <a [routerLink]="item.link" *ngIf="item.link">
-                      <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
-                      <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                      <i
+                        *ngIf="item.showSubItems"
+                        class="fa fa-chevron-down"
+                      ></i>
+                      <i
+                        *ngIf="!item.showSubItems"
+                        class="fa fa-chevron-right"
+                      ></i>
                       {{ item.label }}
                     </a>
                     <span *ngIf="!item.link">
-                      <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
-                      <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                      <i
+                        *ngIf="item.showSubItems"
+                        class="fa fa-chevron-down"
+                      ></i>
+                      <i
+                        *ngIf="!item.showSubItems"
+                        class="fa fa-chevron-right"
+                      ></i>
                       {{ item.label }}
                     </span>
                     <ul *ngIf="item.showSubItems" class="custom-list slist">
                       <li *ngFor="let subItem of item.subItems">
-                        <a [routerLink]="subItem.link" *ngIf="subItem.link">{{ subItem.label }}</a>
+                        <a [routerLink]="subItem.link" *ngIf="subItem.link">{{
+                          subItem.label
+                        }}</a>
                         <span *ngIf="!subItem.link">{{ subItem.label }}</span>
                       </li>
                     </ul>
@@ -91,20 +112,38 @@
               <div class="card-header bg-transparent">CashBook</div>
               <div class="card-body">
                 <div class="custom-list list">
-                  <div *ngFor="let item of cashbook" (click)="toggleItem(item)" [class.active]="item.showSubItems">
+                  <div
+                    *ngFor="let item of cashbook"
+                    (click)="toggleItem(item)"
+                    [class.active]="item.showSubItems"
+                  >
                     <a [routerLink]="item.link" *ngIf="item.link">
-                      <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
-                      <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                      <i
+                        *ngIf="item.showSubItems"
+                        class="fa fa-chevron-down"
+                      ></i>
+                      <i
+                        *ngIf="!item.showSubItems"
+                        class="fa fa-chevron-right"
+                      ></i>
                       {{ item.label }}
                     </a>
                     <span *ngIf="!item.link">
-                      <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
-                      <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                      <i
+                        *ngIf="item.showSubItems"
+                        class="fa fa-chevron-down"
+                      ></i>
+                      <i
+                        *ngIf="!item.showSubItems"
+                        class="fa fa-chevron-right"
+                      ></i>
                       {{ item.label }}
                     </span>
                     <ul *ngIf="item.showSubItems" class="custom-list slist">
                       <li *ngFor="let subItem of item.subItems">
-                        <a [routerLink]="subItem.link" *ngIf="subItem.link">{{ subItem.label }}</a>
+                        <a [routerLink]="subItem.link" *ngIf="subItem.link">{{
+                          subItem.label
+                        }}</a>
                         <span *ngIf="!subItem.link">{{ subItem.label }}</span>
                       </li>
                     </ul>
@@ -118,20 +157,38 @@
               <div class="card-header bg-transparent">Creditors</div>
               <div class="card-body">
                 <div class="custom-list list">
-                  <div *ngFor="let item of creditors" (click)="toggleItem(item)" [class.active]="item.showSubItems">
+                  <div
+                    *ngFor="let item of creditors"
+                    (click)="toggleItem(item)"
+                    [class.active]="item.showSubItems"
+                  >
                     <a [routerLink]="item.link" *ngIf="item.link">
-                      <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
-                      <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                      <i
+                        *ngIf="item.showSubItems"
+                        class="fa fa-chevron-down"
+                      ></i>
+                      <i
+                        *ngIf="!item.showSubItems"
+                        class="fa fa-chevron-right"
+                      ></i>
                       {{ item.label }}
                     </a>
                     <span *ngIf="!item.link">
-                      <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
-                      <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                      <i
+                        *ngIf="item.showSubItems"
+                        class="fa fa-chevron-down"
+                      ></i>
+                      <i
+                        *ngIf="!item.showSubItems"
+                        class="fa fa-chevron-right"
+                      ></i>
                       {{ item.label }}
                     </span>
                     <ul *ngIf="item.showSubItems" class="custom-list slist">
                       <li *ngFor="let subItem of item.subItems">
-                        <a [routerLink]="subItem.link" *ngIf="subItem.link">{{ subItem.label }}</a>
+                        <a [routerLink]="subItem.link" *ngIf="subItem.link">{{
+                          subItem.label
+                        }}</a>
                         <span *ngIf="!subItem.link">{{ subItem.label }}</span>
                       </li>
                     </ul>
@@ -145,20 +202,38 @@
               <div class="card-header bg-transparent">Debtors</div>
               <div class="card-body">
                 <div class="custom-list list">
-                  <div *ngFor="let item of debtors" (click)="toggleItem(item)" [class.active]="item.showSubItems">
+                  <div
+                    *ngFor="let item of debtors"
+                    (click)="toggleItem(item)"
+                    [class.active]="item.showSubItems"
+                  >
                     <a [routerLink]="item.link" *ngIf="item.link">
-                      <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
-                      <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                      <i
+                        *ngIf="item.showSubItems"
+                        class="fa fa-chevron-down"
+                      ></i>
+                      <i
+                        *ngIf="!item.showSubItems"
+                        class="fa fa-chevron-right"
+                      ></i>
                       {{ item.label }}
                     </a>
                     <span *ngIf="!item.link">
-                      <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
-                      <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                      <i
+                        *ngIf="item.showSubItems"
+                        class="fa fa-chevron-down"
+                      ></i>
+                      <i
+                        *ngIf="!item.showSubItems"
+                        class="fa fa-chevron-right"
+                      ></i>
                       {{ item.label }}
                     </span>
                     <ul *ngIf="item.showSubItems" class="custom-list slist">
                       <li *ngFor="let subItem of item.subItems">
-                        <a [routerLink]="subItem.link" *ngIf="subItem.link">{{ subItem.label }}</a>
+                        <a [routerLink]="subItem.link" *ngIf="subItem.link">{{
+                          subItem.label
+                        }}</a>
                         <span *ngIf="!subItem.link">{{ subItem.label }}</span>
                       </li>
                     </ul>
@@ -167,18 +242,8 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-3 mb-3">
-            <div class="card fixed-height-card">
-              <div class="card-header bg-transparent">Debtors</div>
-              <div class="card-body">
-                <ul class="custom-list slist">
-                  <li>Portal Setups</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
-</div>  
+</div>
