--- a/src/app/features/fms/components/receipt-preview/receipt-preview.component.html
+++ b/src/app/features/fms/components/receipt-preview/receipt-preview.component.html
@@ -1,22 +1,28 @@
 <div class="container-fluid">
   <div class="receipt-section">
-<ngx-doc-viewer  
-
-  [fileName]="documentData?.fileName ?? ''"
-  [srcUrl]="filePath ?? ''"
->
-                        
-</ngx-doc-viewer>
-
-</div>
- <!-- Action Buttons -->
- <div class="btn-actions">
-  <div class="btn-back">
-      <button type="button" class="btn btn-link" (click)="onBack()">Back</button>
+    <ngx-doc-viewer
+      #docViewerIframe
+      [fileName]="documentData?.fileName ?? ''"
+      [srcUrl]="filePath ?? ''"
+    >
+    </ngx-doc-viewer>
   </div>
-  <div class="btn-next">
-  <button type="button" class="btn-primary-outline">Print</button>
-  <!-- <button type="button" class="btn-primary" (click)="onNext()">Next</button> -->
-</div></div>
-
+  <!-- Action Buttons -->
+  <div class="btn-actions">
+    <div class="btn-back">
+      <button type="button" class="btn btn-link" (click)="onBack()">
+        Back
+      </button>
+    </div>
+    <div class="btn-next">
+      <button
+        type="button"
+        class="btn-primary-outline"
+        (click)="downloadReceipt()"
+      >
+        Print
+      </button>
+      <!-- <button type="button" class="btn-primary" (click)="onNext()">Next</button> -->
+    </div>
+  </div>
 </div>
